--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,11 @@
     {% load static %}
     <h1>Domácí server</h1>
 
-    <table id="myTable" class="table table-striped table-borderless table-hover w-100">
+    <table id="myTable" class="table table-striped table-borderless table-hover w-100 user-select-none">
         <thead class="thead-dark">
             <tr>
                 <th>Typ</th>
-                <th>IP adresa</th>
+                <th>Webové rozhraní</th>
                 <th>Název</th>
                 <th>Poslední změna</th>
                 {% if user.is_authenticated %}
@@ -24,36 +24,37 @@
         </thead>
         <tbody>
             {% for device in devices %}
-                {% if not device.urls %}
-                    <tr>
-                {% elif device.urls|length == 1 %}
-                    <tr onclick="window.location = '{{ device.urls.0.url }}'">
-                {% else %}
-                    <tr onclick="window.location = '/device/{{ device.id }}/urls'">
-                {% endif %}
-                        <td>{{ device.type }}</td>
-                        <td>{{ device.ip_address }}</td>
-                        <td>{{ device.name }}</td>
-                        <td>{{ device.updated_at }}</td>
-                        {% if user.is_authenticated %}
-                            <td>                                                                    // TODO: prevent going to device url/urls
-                                <div class="p-0 m-0 row">
-                                    <div class="col-6">
-                                        <a type="button" href="/device/{{ device.id }}/edit" class="btn btn-outline-dark">
-                                            <i class="bi bi-pencil"></i>
-                                        </a>
-                                    </div>
-
-                                    <form class="m-0 p-0 col-6" method="post" action="/device/{{ device.id }}/delete" id="deleteForm_{{ device.id }}">
-                                        {% csrf_token %}
-                                        <button type="button" class="btn btn-outline-danger" id="deleteButton_{{ device.id }}" onclick="submitForm(this.id, document.getElementById(this.id).parentElement.id);">
-                                            <i class="bi bi-trash"></i>
-                                        </button>
-                                    </form>
-                                </div>
-                            </td>
+                <tr>
+                    <td>{{ device.type }}</td>
+                    <td>
+                        {% if device.urls|length == 1 %}
+                            <button class="btn btn-link p-0 m-0 url_link" onclick="window.open(`{{ device.urls.0.url }}`);">{{ device.ip_address }}</button>
+                        {% else %}
+                            {{ device.ip_address }}
                         {% endif %}
-                    </tr>
+                        (<a class="url_link" href="/device/{{ device.id }}/urls"><small>všechny URL</small></a>)                            <!-- TODO: solve problem with default device url -->
+                    </td>
+                    <td>{{ device.name }}</td>
+                    <td>{{ device.updated_at }}</td>
+                    {% if user.is_authenticated %}
+                        <td>                                                                    <!-- TODO: prevent going to device url/urls -->
+                            <div class="p-0 m-0 row">
+                                <div class="col-6">
+                                    <a type="button" href="/device/{{ device.id }}/edit" class="btn btn-outline-dark">
+                                        <i class="bi bi-pencil"></i>
+                                    </a>
+                                </div>
+
+                                <form class="m-0 p-0 col-6" method="post" action="/device/{{ device.id }}/delete" id="deleteForm_{{ device.id }}">
+                                    {% csrf_token %}
+                                    <button type="button" class="btn btn-outline-danger" id="deleteButton_{{ device.id }}" onclick="deleteFormSubmit(`{{ device.name }}`, document.getElementById(this.id).parentElement.id);">
+                                        <i class="bi bi-trash"></i>
+                                    </button>
+                                </form>
+                            </div>
+                        </td>
+                    {% endif %}
+                </tr>
             {% endfor %}
         </tbody>
     </table>
