--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -18,13 +18,13 @@
 <body>
     {% if messages %}
         {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}" role="alert">
+            <div class="alert alert-{{ message.tags }} m-4 mx-5" role="alert">
                 {{ message }}
             </div>
         {% endfor %}
     {% endif %}
 
-    <div class="container">
+    <div class="container mt-2">
         {% block content %}
             {# web content #}
         {% endblock %}
