--- a/templates/device/create.html
+++ b/templates/device/create.html
@@ -1,7 +1,12 @@
 {% extends 'layouts/layout.html' %}
 
-{% block css %}
+{% load static %}
 
+{% block css %}
+    <style>
+        label{font-weight: bolder}                      {# bold labels #}
+        .disabled {pointer-events: none;}               {# no onclick events for disabled buttons #}
+    </style>
 {% endblock %}
 
 {% block title %}Zařízení | Vytvořit{% endblock %}
@@ -23,23 +28,54 @@
         <div class="form-group">
             <label for="type">Typ zařízení:</label>
             <select class="form-control" id="type" name="type">
-                <option selected value="Neznámé">Neznámý</option>
                 {% for choice in choices %}
-                    {% if choice.1 != 'Neznámé' %}
-                        <option value="{{ choice.1 }}">{{ choice.1 }}</option>
-                    {% endif %}
+                    <option value="{{ choice.0 }}">{{ choice.1 }}</option>
                 {% endfor %}
             </select>
         </div>
 
         <div class="form-group">
             <label for="description">Popis:</label>
-            <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+            <textarea class="form-control" id="description" name="description" rows="3" placeholder="Popis zařízení"></textarea>
         </div>
+
+    <hr>
+
+        <div class="form-group">
+            <label for="url_table">Adresy URL pro přístup k zařízení:</label>
+            <table id="url_table" class="table table-borderless table-sm text-nowrap">
+                <thead>
+                    <tr>
+                        <td style="width: 10%" class="text-center">URL ID
+                        <td style="width: 30%">Popis URL</td>
+                        <td style="width: 53%">URL adresa</td>
+                        <td style="width: 7%" class="text-center">Odebrat</td>
+                    </tr>
+                </thead>
+                <tbody id="url_table_body">
+                    <tr id="url_1" class="text-center url-row">
+                        <td class="align-middle" id="url_1_id">1</td>
+                        <td>
+                            <input class="form-control" name="url_1_name" type="text" placeholder="popis URL">
+                        </td>
+                        <td>
+                            <input class="form-control" name="url_1_url" type="text" placeholder="URL adresa">
+                        </td>
+                        <td class="align-middle">
+                           <button type="button" class="btn btn-outline-secondary disabled" onclick="removeTableRow(this.parentElement.parentElement.id.substr(4, 1));">
+                               <i class="bi bi-trash"></i>
+                           </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <button type="button" class="btn btn-outline-secondary float-right" onclick="addUrl();">Nová URL</button>
+        </div>
+
         <input type="submit" class="btn btn-outline-primary" value="Vytvořit zařízení">
     </form>
 {% endblock %}
 
 {% block script %}
-
+    <script src="{% static 'js/home/create.js' %}"></script>
 {% endblock %}
