--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         </thead>
         <tbody>
             {% for device in devices %}
-                <tr>
+                <tr data-toggle="tooltip" data-placement="left" title="{{ device.description }}">
                     <td hidden>{{ device.ip_address_numeric }}</td>
                     <td>{{ device.type }}</td>
                     <td>
