device/urls creation

--- a/templates/device/create.html
+++ b/templates/device/create.html
@@ -46,7 +46,7 @@
             <table id="url_table" class="table table-borderless table-sm text-nowrap">
                 <thead>
                     <tr>
-                        <td style="width: 10%" class="text-center">URL ID
+                        <td style="width: 10%" class="text-center">URL</td>
                         <td style="width: 30%">Popis URL</td>
                         <td style="width: 53%">URL adresa</td>
                         <td style="width: 7%" class="text-center">Odebrat</td>
