--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
                             <x data-toggle="tooltip" data-placement="top" title="žádná výchozí URL">{{ device.ip_address }}</x>
                         {% endif %}
 
-                        {% if device.all_urls %}
+                        {% if device.all_urls_page %}
                             (<a class="url_link" href="/device/{{ device.id }}/urls"><small>všechny URL</small></a>)
                         {% else %}
                             (<small>žádné URL</small>)
