--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     {% load static %}
     <h1>Domácí server</h1>
 
-    <table id="myTable" class="table table-striped table-borderless table-hover w-100 user-select-none">
+    <table id="myTable" class="table table-striped table-borderless table-hover w-100">
         <thead class="thead-dark">
             <tr>
                 <th hidden>ip_address_numeric_value</th>
