js for device creation simplified device URL links simplified on index page (frontend)

--- a/templates/device/create.html
+++ b/templates/device/create.html
@@ -62,7 +62,7 @@
                             <input class="form-control" name="url_1_url" type="text" placeholder="URL adresa">
                         </td>
                         <td class="align-middle">
-                           <button type="button" class="btn btn-outline-secondary disabled" onclick="removeTableRow(this.parentElement.parentElement.id.substr(4, Infinity));">
+                           <button type="button" class="btn btn-outline-secondary disabled" onclick="removeTableRow(this.parentElement.parentElement);">
                                <i class="bi bi-trash"></i>
                            </button>
                         </td>
