--- a/templates/index.html
+++ b/templates/index.html
@@ -32,16 +32,17 @@
                     <td>{{ device.type }}</td>
                     <td>{{ device.name }}</td>
                     <td>
+                        {{ device.ip_address }}
                         {% if device.default_url %}
-                            <button class="btn btn-link p-0 m-0 url_link" onclick="window.open(`{{ device.default_url.url }}`);" data-toggle="tooltip" data-placement="top" title="{{ device.default_url.name }} ({{ device.default_url.url }})">{{ device.ip_address }}</button>
+                            (<button class="btn btn-link p-0 pb-1 url_link" onclick="window.open(`{{ device.default_url.url }}`);" data-toggle="tooltip" data-placement="top" title="{{ device.default_url.url }}"><small>{{ device.default_url.name }}</small></button>
                         {% else %}
-                            <x data-toggle="tooltip" data-placement="top" title="žádná výchozí URL">{{ device.ip_address }}</x>
+                            (<small>žádná výchozí URL</small>
                         {% endif %}
-
+                        <x> - </x>
                         {% if device.all_urls_page %}
-                            (<a class="url_link" href="/device/{{ device.id }}/urls"><small>všechny URL</small></a>)
+                            <a class="url_link" href="/device/{{ device.id }}/urls"><small>všechny dostupné URL</small></a>)
                         {% else %}
-                            (<small>žádné URL</small>)
+                            <small>žádné dostupné URL</small>)
                         {% endif %}
                     </td>
                     <td>{{ device.updated_at }}</td>
