--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
                 <th>Odkazy</th>
                 <th>Poslední změna</th>
                 {% if user.is_authenticated %}
-                    <th>Editace</th>
+                    <th>Správa</th>
                 {% endif %}
             </tr>
         </thead>
