--- a/templates/device/edit.html
+++ b/templates/device/edit.html
@@ -12,7 +12,7 @@
         {% csrf_token %}
         <div class="form-group">
             <label for="name">Název:</label>
-            <input type="text" class="form-control" id="name" name="name" placeholder="Název zařízení" value="{{ device.name }}">
+            <input type="text" class="form-control" id="name" name="name" placeholder="Název zařízení" value="{{ device.name }}" required>
         </div>
 
         <div class="form-group">
@@ -26,7 +26,7 @@
 
         <div class="form-group">
             <label for="ip_address">IP adresa:</label>
-            <input type="text" class="form-control" id="ip_address" name="ip_address" placeholder="IP adresa zařízení" value="{{ device.ip_address }}">
+            <input type="text" class="form-control" id="ip_address" name="ip_address" placeholder="IP adresa zařízení" value="{{ device.ip_address }}" required>
         </div>
 
         <div class="form-group">
@@ -69,10 +69,10 @@
                                 {% csrf_token %}
                                 <td class="align-middle">{{ url.id }}</td>
                                 <td>
-                                    <input class="form-control" name="name" type="text" placeholder="popis URL" value="{{ url.name }}">
+                                    <input class="form-control" name="name" type="text" placeholder="popis URL" value="{{ url.name }}" required>
                                 </td>
                                 <td>
-                                    <input class="form-control" name="url" type="text" placeholder="URL adresa" value="{{ url.url }}">
+                                    <input class="form-control" name="url" type="text" placeholder="URL adresa" value="{{ url.url }}" required>
                                 </td>
                                 <td class="align-middle">
                                     <button type="submit" class="btn btn-outline-primary">
@@ -83,7 +83,7 @@
                                     </button>
                                 </td>
                             </form>
-                            <form id="deleteForm_{{ url.id }}" method="POST" action="/device/{{ device.id }}/urls/{{ url.id }}/delete">{% csrf_token %}</form>
+                            <form id="deleteForm_{{ url.id }}" method="POST" action="/device/{{ device.id }}/urls/{{ url.id }}/delete" hidden>{% csrf_token %}</form>
                         </tr>
                     {% endfor %}
                 {% endif %}
