ip address validation

--- a/templates/device/create.html
+++ b/templates/device/create.html
@@ -13,25 +13,28 @@
 
 {% block content %}
     <h1>Vytvořit nové zařízení</h1>
-    <form method="post" enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data" class="g-3 needs-validation" novalidate>
         {% csrf_token %}
         <div class="form-group">
             <label for="name">Název:</label>
             <input type="text" class="form-control" id="name" name="name" placeholder="Název zařízení" required>
+            <div class="invalid-feedback">Zadejte platný název zařízení.</div>
         </div>
 
         <div class="form-group">
             <label for="ip_address">IP adresa:</label>
-            <input type="text" class="form-control" id="ip_address" name="ip_address" placeholder="IP adresa zařízení" required>
+            <input type="text" class="form-control" id="ip_address" oninput="ip_validate(this);" name="ip_address" placeholder="IP adresa zařízení" required>
+            <div class="invalid-feedback">Zadejte platnou IP adresu.</div>
         </div>
 
         <div class="form-group">
             <label for="type">Typ zařízení:</label>
-            <select class="form-control" id="type" name="type">
+            <select class="form-control" id="type" name="type" required>
                 {% for choice in choices %}
                     <option value="{{ choice.0 }}">{{ choice.1 }}</option>
                 {% endfor %}
             </select>
+            <div class="invalid-feedback">Vyberte typ zařízení.</div>
         </div>
 
         <div class="form-group">
@@ -78,4 +81,5 @@
 
 {% block script %}
     <script src="{% static 'js/home/create.js' %}"></script>
+    <script src="{% static 'js/validation.js' %}"></script>
 {% endblock %}
